fix(landing-page): add margin to about us for mobile, remove scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+body::-webkit-scrollbar {
+  width: 0px;
+}
+
 html,
 body {
   padding: 0;
